--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 		</dependency>
 		<!-- Akhir-->
 
+		<!-- Insert Data -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<!--Akhir-->
+
 
 	</dependencies>
 
